--- a/lab3/src/makefile
+++ b/lab3/src/makefile
@@ -7,6 +7,9 @@ sequential_min_max : utils.o find_min_max.o utils.h find_min_max.h
 parallel_min_max : utils.o find_min_max.o utils.h find_min_max.h
 	$(CC) -o parallel_min_max utils.o find_min_max.o parallel_min_max.c $(CFLAGS)
 
+task_5 : task_5.c
+	$(CC) -o task_5 task_5.c $(CFLAGS)
+
 utils.o : utils.h
 	$(CC) -o utils.o -c utils.c $(CFLAGS)
 
@@ -14,4 +17,4 @@ find_min_max.o : utils.h find_min_max.h
 	$(CC) -o find_min_max.o -c find_min_max.c $(CFLAGS)
 
 clean :
-	rm utils.o find_min_max.o sequential_min_max parallel_min_max
+	rm utils.o find_min_max.o sequential_min_max parallel_min_max task_5
